Move all error codes and message to constant class and add comment on methods